# IntermediateCpp

./: .gitignore  CMakeLists.txt  README.md  combined.md  labguide.docx
Accumulate/: Readme.md
Algorithms/: CMakeLists.txt  Color.cpp  Landscape.h  Measurable.h  Rectangle.h
Algorithms/Tests/: CircleTest.cpp
ConsoleApp/: CMakeLists.txt  main.cpp
ConsoleAppProject/: CMakeLists.txt
Containers/: CMakeLists.txt  Circle.h  Readme.md
Containers/Tests/: LandscapeTest.cpp
Examples/friends/: main.cpp
Examples/inline/: main.cpp  module1.cpp  module1.h  module2.cpp  module2.h
Examples/modules/: Cat.cpp  Readme.md  funcmodule.cpp  main.cpp
Examples/oparators/: main.cpp
Examples/operators/: main.cpp
Examples/statics/: main.cpp
Examples/task_helpers/: main.cpp
Exceptions/: CMakeLists.txt  Circle.h  Readme.md
Exceptions/Tests/: RectangleTest.cpp
ForEach/: Readme.md
FunctionsPointers/: CMakeLists.txt  Circle.h  Color.h  Landscape.h  Readme.md  Rectangle.h
FunctionsPointers/Tests/: CircleTest.cpp  ColorTest.cpp  LandscapeTest.cpp
GoogleTestProject/: CMakeLists.txt  mycode.cpp
GoogleTestProject/Tests/: Sample.cpp
Inheritance/: CMakeLists.txt  Readme.md
Inheritance/Tests/: CircleTest.cpp  RectangleTest.cpp
Interfaces/: CMakeLists.txt  LinkedList.h  Readme.md  Rectangle.h  Shape.h
Interfaces/Tests/: LandscapeTest.cpp
Landscaping/: CMakeLists.txt  Circle.h  Color.cpp  Color.h  Readme.md  Rectangle.h
Landscaping/Tests/: CircleTest.cpp  ColorTest.cpp  RectangleTest.cpp
LinkedList/: Readme.md  dog.h  dog_list.cpp  dog_list.h  main (1).cpp
Memory/: Readme.md
MenuSystemFunctionPtr/: CMakeLists.txt  Menu.h  MenuApp.cpp  Readme.md
MenuSystemFunctor/: CMakeLists.txt  Menu.h  MenuApp.cpp  Readme.md
MenuSystemInterface/: CMakeLists.txt  Menu.h  MenuApp.cpp  Readme.md
MenuSystemLambda/: CMakeLists.txt  Menu.cpp  Menu.h  MenuApp.cpp  Readme.md
MenuSystemStarter/: CMakeLists.txt  Menu.h  MenuApp.cpp  Readme.md
MoveSemantics/: CMakeLists.txt  Readme.md  main.cpp
Namespaces/: CMakeLists.txt  Circle.h  Color.h  Landscape.h  Readme.md  Rectangle.h
Namespaces/Tests/: CircleTest.cpp  ColorTest.cpp  LandscapeTest.cpp  RectangleTest.cpp
OperatorOverloading/: CMakeLists.txt  Circle.h  Color.cpp  Color.h  Readme.md  linked_list.cpp  linked_list.h
OperatorOverloading/Tests/: ColorTest.cpp
SmartPointers/: CMakeLists.txt  Circle.h  LinkedList.h  Readme.md
SmartPointers/Tests/: ColorTest.cpp
Solutions/ContainerSolution/: CMakeLists.txt  Landscape.h  NotImplementedException.h
Solutions/ExceptionSolution/: CMakeLists.txt  Landscape.h
Solutions/ExceptionSolution/Tests/: ColorTest.cpp
Solutions/ForEachSolution/: CMakeLists.txt  Color.cpp  Color.h  Landscape.h
Solutions/ForEachSolution/Tests/: ColorTest.cpp
Solutions/InheritanceSolution/: CMakeLists.txt  Landscape.h
Solutions/InterfaceSolution/: CMakeLists.txt  Color.h  Shape.h
Solutions/InterfaceSolution/Tests/: CircleTest.cpp  ColorTest.cpp  RectangleTest.cpp
Solutions/LandscapingSolution/: CMakeLists.txt
Solutions/LandscapingSolution/Tests/: Circle.h  CircleTest.cpp  Color.h  Rectangle.h  RectangleTest.cpp
Solutions/LinkedListSolution/: CMakeLists.txt  CircleList.cpp  CircleList.h  Landscape.h
Solutions/LinkedListSolution/Tests/: LandscapeTest.cpp
Solutions/MemorySolution/: CMakeLists.txt  Circle.h  Color.cpp  Color.h  Landscape.h
Solutions/MemorySolution/Tests/: ColorTest.cpp
Solutions/NamespaceSolution/: CMakeLists.txt  Color.h  Landscape.h
Solutions/NamespaceSolution/Tests/: ColorTest.cpp  RectangleTest.cpp
Solutions/OperatorSolution/: CMakeLists.txt
Solutions/OperatorSolution/Tests/: CircleTest.cpp  LandscapeTest.cpp
Solutions/SmartPointerSolution/: CMakeLists.txt  Color.h  Landscape.h  main.cpp
Solutions/StaticsSolution/: CMakeLists.txt  Rectangle.h
Solutions/StaticsSolution/Tests/: CircleTest.cpp
Solutions/StreamSolution/: main.cpp
Solutions/StringSolution/: main.cpp
Solutions/TasksSolution/: CMakeLists.txt  main.cpp
Solutions/TemplateSolution/: CMakeLists.txt
Solutions/TemplateSolution/Tests/: CircleTest.cpp  ColorTest.cpp
Solutions/ThreadsSolution/: CMakeLists.txt  jthreads.cpp  main.cpp
Statics/: Readme.md
Streams/: Readme.md
Strings/: CMakeLists.txt  Readme.md  main.cpp
Tasks/: CMakeLists.txt  Readme.md  main.cpp
Templates/: CMakeLists.txt  Circle.h  CircleList.cpp  CircleList.h  Color.cpp  Landscape.h  Readme.md  Rectangle.h
Templates/Tests/: CircleTest.cpp  ColorTest.cpp
Templates20/: CMakeLists.txt  Readme.md  main.cpp
Threads/: CMakeLists.txt  Readme.md  main.cpp
